compiler/testData/diagnostics/tests/inference/lambdaAgainstSimpleTypeMismatch.diag.txt
/lambdaAgainstSimpleTypeMismatch.kt:6:9: error: type mismatch: inferred type is (String) -> Int but Int was expected
    foo({ a: String -> 42 })
        ^^^^^^^^^^^^^^^^^^^

